// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should pass props to slots 1`] = `
<h2
  className="root"
  id="heading"
>
  <div
    className="heading"
  >
    Heading
  </div>
  <Slot
    className="toolbar"
    name="slot"
    props={
      Object {
        "bar": "baz",
        "foo": 1,
      }
    }
  />
</h2>
`;

exports[`renderer should render H1 tag 1`] = `
<h1
  className="root"
  id="heading"
>
  <div
    className="heading isPrimary"
  >
    Heading
  </div>
  <Slot
    className="toolbar"
    name="pizza"
    props={Object {}}
  />
</h1>
`;

exports[`renderer should render H2 tag 1`] = `
<h2
  className="root"
  id="heading"
>
  <div
    className="heading"
  >
    Heading
  </div>
  <Slot
    className="toolbar"
    name="pizza"
    props={Object {}}
  />
</h2>
`;

exports[`renderer should render heading with deprecated styles 1`] = `
<h2
  className="root"
  id="heading"
>
  <div
    className="heading isDeprecated"
  >
    Heading
  </div>
  <Slot
    className="toolbar"
    name="pizza"
    props={Object {}}
  />
</h2>
`;
